feat: representative color
